# RoSim

./: CMakeLists.txt
config/schemes/: robot.txt  robot_2.txt  robot_test.txt
src/: CMakeLists.txt  main.cpp
